--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,22 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.example.architecturenoteapp">
 
     <application
         android:allowBackup="true"
+        android:name=".NoteApp"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.NoteApp"
+        android:theme="@style/Theme.ArchitectureNoteApp"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".feature_note.presentation.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.NoteApp">
+            android:theme="@style/Theme.ArchitectureNoteApp">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
